{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 446,
  "lineage": "fd4d4dd6-b248-fe6d-65f0-09d0e6b2882b",
  "resources": [
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:loadbalancer/app/example-lb/15fcf80c860b2586",
            "arn_suffix": "app/example-lb/15fcf80c860b2586",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-lb-765566203.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:loadbalancer/app/example-lb/15fcf80c860b2586",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04b637de367700a33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024bee7d7c80272a9"
              },
              {
                "subnet_id": "subnet-02afb2885082aabaf"
              }
            ],
            "subnets": [
              "subnet-024bee7d7c80272a9",
              "subnet-02afb2885082aabaf"
            ],
            "vpc_id": "vpc-02249be70919abaa2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "rabbitmq_internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:loadbalancer/net/rabbitmq-internal-nlb/9ac0999e3dcb213b",
            "arn_suffix": "net/rabbitmq-internal-nlb/9ac0999e3dcb213b",
            "dns_name": "rabbitmq-internal-nlb-9ac0999e3dcb213b.elb.eu-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:loadbalancer/net/rabbitmq-internal-nlb/9ac0999e3dcb213b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "rabbitmq-internal-nlb",
            "security_groups": [
              "sg-04b637de367700a33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024bee7d7c80272a9"
              },
              {
                "subnet_id": "subnet-02afb2885082aabaf"
              }
            ],
            "subnets": [
              "subnet-024bee7d7c80272a9",
              "subnet-02afb2885082aabaf"
            ],
            "vpc_id": "vpc-02249be70919abaa2",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:listener/net/rabbitmq-internal-nlb/9ac0999e3dcb213b/ffbb334b9a886c90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:targetgroup/rabbitmq-nlb-tg/618f5b30f68486f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:listener/net/rabbitmq-internal-nlb/9ac0999e3dcb213b/ffbb334b9a886c90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:loadbalancer/net/rabbitmq-internal-nlb/9ac0999e3dcb213b",
            "mutual_authentication": [],
            "port": 5672,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_lb.rabbitmq_internal_nlb",
            "module.ec2-module.aws_lb_target_group.rabbitmq_nlb_tg",
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rabbitmq_nlb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:targetgroup/rabbitmq-nlb-tg/618f5b30f68486f3",
            "arn_suffix": "targetgroup/rabbitmq-nlb-tg/618f5b30f68486f3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:targetgroup/rabbitmq-nlb-tg/618f5b30f68486f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rabbitmq-nlb-tg",
            "port": 5672,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02249be70919abaa2"
          }
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rabbitmq_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:targetgroup/rabbitmq-tg/2073fcc6b1765945",
            "arn_suffix": "targetgroup/rabbitmq-tg/2073fcc6b1765945",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:692324108111:targetgroup/rabbitmq-tg/2073fcc6b1765945",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rabbitmq-tg",
            "port": 15672,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02249be70919abaa2"
          }
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:692324108111:security-group/sg-04b637de367700a33",
            "description": "Example Security Group",
            "egress": [],
            "id": "sg-04b637de367700a33",
            "ingress": [],
            "name": "example-sg",
            "name_prefix": "",
            "owner_id": "692324108111",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02249be70919abaa2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1508242474",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-0a365b842f1eabcab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1892549604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-099e9890199e44c7d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-87586158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-0e7f3b54a03aa879e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 35197,
            "id": "sgrule-2892021625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-09cb6baa0e673987f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 35197,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule15",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 15672,
            "id": "sgrule-3039220147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-01b64a3ac89eeebdd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 15672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 4369,
            "id": "sgrule-858728027",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-01f2afe058ac127cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4369,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5672,
            "id": "sgrule-1285819186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-007826564b612cc0b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3326369361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b637de367700a33",
            "security_group_rule_id": "sgr-02231561cc4f7f919",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-module.aws_security_group.example_sg"
          ]
        }
      ]
    }
  ]
}